--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Portfolio | Wendres Lucas</title>
+  <link rel="stylesheet" href="./style.css">
 
+
+</head>
 <body>
 <!-- partial:index.partial.html -->
 <head>
