--- a/index.html
+++ b/index.html
@@ -6,16 +6,7 @@
   <link rel="stylesheet" href="./style.css">
 
 
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | Wendres Lucas</title>
-    
-</head>
+</head><!-- partial:index.partial.html -->
 
 <body>
     <div class="container">
